# btelem

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENCE.txt  Makefile  README.md
.github/workflows/: rust.yml
docs/: benchmark.md  issues_btelem_serve.md  rust-viewer-plan.md
examples/: basic.c  tcp_client.py  tcp_source.py
include/btelem/: btelem.h  btelem_platform.h  btelem_serve.h  btelem_serve_udp.h  btelem_types.h
python/: pyproject.toml  setup.py
python/btelem/: __init__.py  _native.c  capture.py  cli.py  decoder.py  recorder.py  schema.py  storage.py  transport.py
python/btelem.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python/btelem/viewer/: __init__.py  app.py  cursors.py  event_log.py  plots.py  provider.py  tree.py
src/: btelem.c  btelem_serve.c  btelem_serve_udp.c
tests/: bench_log.c  test_capture.py  test_counter_server.c  test_e2e.py  test_native_stress.py  test_recorder.py  test_ring.c  test_schema.py  test_slow_consumer.py  test_stress.c  test_tcp_backpressure.c
viewer/: Cargo.toml
viewer/crates/btelem-capture/: Cargo.toml
viewer/crates/btelem-capture/src/: lib.rs
viewer/crates/btelem-ingest/: Cargo.toml
viewer/crates/btelem-ingest/src/: lib.rs  mapper.rs  tcp.rs
viewer/crates/btelem-ingest/tests/: tcp_counter.rs
viewer/crates/btelem-store/: Cargo.toml
viewer/crates/btelem-store/src/: lib.rs  mock.rs
viewer/crates/btelem-viewer/: Cargo.toml
viewer/crates/btelem-viewer/src/: app.rs  layout.rs  lib.rs  main.rs  plot_renderers.rs  view_state.rs
viewer/crates/btelem-viewer/tests/: construct.rs
viewer/crates/btelem-wire/: Cargo.toml
viewer/crates/btelem-wire/src/: lib.rs  packet.rs  schema.rs  value.rs
viewer/crates/btelem-wire/tests/: fuzz.rs  wire.rs
viewer/xtask/: Cargo.toml
viewer/xtask/src/: main.rs
