[workspace]
resolver = "2"
members = [
    "crates/btelem-wire",
    "crates/btelem-store",
    "crates/btelem-capture",
    "crates/btelem-ingest",
    "crates/btelem-viewer",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[workspace.dependencies]
btelem-wire    = { path = "crates/btelem-wire" }
btelem-store   = { path = "crates/btelem-store" }
btelem-capture = { path = "crates/btelem-capture" }
btelem-ingest  = { path = "crates/btelem-ingest" }

bytemuck   = { version = "1.16", features = ["derive"] }
thiserror  = "1"
proptest   = "1"

[profile.release]
lto = "thin"
codegen-units = 1
