[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
btelem-store = { workspace = true }
btelem-ingest = { workspace = true }
clap = { version = "4", features = ["derive"] }
