[package]
name = "btelem-viewer"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "btelem-viewer"
path = "src/main.rs"

[dependencies]
btelem-store   = { workspace = true }
btelem-ingest  = { workspace = true }
btelem-capture = { workspace = true }
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.29"
egui_dock = { version = "0.14", features = ["serde"] }
egui_plot = "0.29"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "tokio"] }
